--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -4,12 +4,18 @@
     <% if flash[:notice] %>
       <div class="flash notice" role="alert" data-turbo-temporary data-controller="removeable" data-removeable-after-value="5">
         <p class="text-small"><%= flash[:notice] %></p>
+        <div class="close" data-action="click->removeable#remove">
+          <%= render partial: "icons/close" %>
+        </div>
       </div>
     <% end %>
 
     <% if flash[:alert] %>
       <div class="flash alert" role="alert" data-turbo-temporary data-controller="removeable" data-removeable-after-value="5">
         <p class="text-small"><%= flash[:alert] %></p>
+        <div class="flash--close" data-action="click->removeable#remove">
+          <%= render partial: "icons/close" %>
+        </div>
       </div>
     <% end %>
   </div>
