add password visibility to session pages

--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -17,8 +17,14 @@
           </div>
         <% end %>
         <%= f.text_field :username, value: @user.username, require: true, autofocus: true, autocomplete: "username", class: "input mt-2", placeholder: "Username" %>
-        <%= f.password_field :password, required: true, autocomplete: "new-password", class: "input mt-2", placeholder: "Password" %>
-         <%= f.password_field :password_confirmation, required: true, autocomplete: "new-password", class: "input mt-2", placeholder: "Confirmation" %>
+        <div class="mt-2 relative" data-controller="password-visibility">
+          <%= f.password_field :password, required: true, autocomplete: "new-password", class: "input", placeholder: "Password", data: { "password-visibility-target" => "input" } %>
+          <%= render partial: 'shared/password_visibility' %>
+        </div>
+        <div class="mt-2 relative" data-controller="password-visibility">
+          <%= f.password_field :password_confirmation, required: true, autocomplete: "new-password", class: "input", placeholder: "Confirmation", data: { "password-visibility-target" => "input" } %>
+          <%= render partial: 'shared/password_visibility' %>
+        </div>
         <div class="flex flex-row justify-between items-baseline">
           <%= f.submit "Sign up", class: "button button-primary mt-2" %>
           <%= link_to "Log in", sign_in_path, class: "text-small opacity-50 hover:opacity-100" %>
