sync play/pause station with subscribers

--- a/app/assets/stylesheets/player.css
+++ b/app/assets/stylesheets/player.css
@@ -16,15 +16,15 @@
   @apply cursor-pointer;
 }
 
-.player-playing .player-btn[data-action="click->player#play"] {
+.player-playing .player-btn[data-turbo-command="PlayerCommand#resume"] {
   @apply hidden;
 }
 
-.player-btn[data-action="click->player#pause"] {
+.player-btn[data-turbo-command="PlayerCommand#pause"] {
   @apply hidden;
 }
 
-.player-playing .player-btn[data-action="click->player#pause"] {
+.player-playing .player-btn[data-turbo-command="PlayerCommand#pause"] {
   @apply block;
 }
 
