--- a/app/views/player/_player.html.erb
+++ b/app/views/player/_player.html.erb
@@ -1,8 +1,10 @@
 <%# locals: (track:, station: nil, live: false) -%>
-<div class="player"
+<div id="active-player"
+  class="player"
   data-controller="player"
   data-player-duration-value="<%= track&.duration %>"
   data-player-track-value="<%= track&.id %>"
+  data-player-playing-value="true"
   data-player-playing-class="player-playing"
   data-player-next-track-url-value="<%= live ? play_next_live_station_path : (!station && play_next_track_path(track))%>"
   data-player-track-outlet=".track"
@@ -12,16 +14,19 @@
       <div class="player--timeline-progress" style="width:0%;" data-player-target="progress"></div>
     </div>
   <% end %>
-  <% unless station %>
-  <div class="player--controls">
-    <span class="player-btn" data-action="click->player#play">
-      <%= render "icons/play" %>
-    </span>
-    <span class="player-btn" data-action="click->player#pause">
-      <%= render "icons/pause" %>
-    </span>
-  </div>
+
+  <% if !station || live %>
+    <div class="player--controls">
+      <%= link_to "#", method: :post, class: "player-btn", data: {"turbo-command" => "PlayerCommand#resume"} do %>
+        <%= render "icons/play" %>
+      <% end %>
+
+      <%= link_to "#", method: :post, class: "player-btn", data: {"turbo-command" => "PlayerCommand#pause"} do %>
+        <%= render "icons/pause" %>
+      <% end %>
+    </div>
   <% end %>
+
   <div class="player--track">
     <% if station %>
       <% if live %>
